<resources>
    <string name="app_name">AndroidCodingChallenge</string>
    <string name="logo">Logo</string>
    <string name="language">Language</string>
    <string name="login_credentials">Login Credentials</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="shivani">Shivani</string>
    <string name="shendkar">Shendkar</string>
    <string name="work_email">Work email</string>
    <string name="company_name">Company name</string>
    <string name="woliba">Woliba</string>
    <string name="next">Next</string>
    <string name="enter_work_email">Enter work email</string>
    <string name="verify">Verify</string>

    <string name="email_not_access">This email ID has not been invited by your company admin. Please contact your admin for access.</string>
    <string name="complete_your_profile">Complete Your Profile</string>
    <string name="password">Password</string>
    <string name="enter_password">Enter password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="birthday">Birthday</string>
    <string name="mm_dd_yyyy">MM/DD/YYYY</string>
    <string name="contact_number">Contact number</string>
    <string name="enter_contact_number">Enter contact number</string>

    <string name="terms_and_privacy_policy">I agree to Woliba\'s Terms of Service and Privacy Policy.</string>

    <string name="terms_of_service_and_privacy_policy">
        <![CDATA[
            <font color="#092F41">I agree to Woliba&apos;s</font> <font color="#F37A65">Terms of Service</font>
            <font color="#092F41">and</font> <font color="#F37A65">Privacy Policy.</font>
        ]]>
    </string>

    <string name="name_chars">ABCDEFGHIJKLMNOPQRSTUVWXYZ abcdefghijklmnopqrstuvwxyz</string>

    <string name="all_fields_are_required">All fields are required.</string>
    <string name="invalid_email_address">Invalid email address.</string>
    <string name="email_not_verified_yet">Email not verified yet.</string>
    <string name="company_name_should_not_empty">Company name should not be empty.</string>

    <string name="input_verification_code">Input Verification Code</string>
    <string name="we_ve_sent_a_6_digit_otp">We’ve sent a 6-digit OTP to your work email. \nPlease enter it below to continue.</string>
    <string name="resend_otp_in_03_00">Resend OTP in 03 : 00</string>
    <string name="incorrect_otp">Incorrect OTP</string>
    <string name="submit">Submit</string>

    <string name="welcome_message">You’ve just taken the first step toward a healthier, more energized you! Dive into fun challenges, set meaningful goals, and discover habits that stick. Your wellness journey starts right now — let’s make it amazing!</string>
    <string name="welcome_to_woliba">Welcome to Woliba!</string>
    <string name="let_s_get_started">Let’s Get Started</string>
    <string name="getting_your_wellness_journey_ready">Getting your wellness journey ready...</string>
    <string name="thank_you">Thank You!</string>

    <string name="resend_otp_in_">Resend OTP in %02d : %02d</string>
    <string name="resend">Resend</string>

    <string name="passwords_dont_match_please_reenter">Passwords do not match. Please re-enter.</string>
    <string name="passwords_must_be_eight_char_log">Password must be at least 8 characters long.</string>
    <string name="please_accept_terms_and_privacy_policy">Please accept Terms of Service and Privacy Policy.</string>
    <string name="invalid_date_format">Invalid date format.</string>
    <string name="contact_must_be_ten_digits_long">Contact number must be exactly 10 digits.</string>

</resources>