<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View"/>


    </data>

<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <!-- Woliba Logo -->
    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/logoIcon"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:contentDescription="@string/logo"
        android:src="@drawable/ic_logo"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="8dp"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Language Flag & Dropdown -->
    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/flagIcon"
        android:layout_width="70dp"
        android:layout_height="40dp"
        android:contentDescription="@string/language"
        android:src="@drawable/ic_us_flag"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Login Card Container -->
    <androidx.cardview.widget.CardView
        android:id="@+id/loginCard"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:layout_marginTop="32dp"
        app:cardCornerRadius="16dp"
        app:cardElevation="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logoIcon">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <!-- Header -->
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/loginHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:paddingBottom="16dp"
                android:text="@string/login_credentials"
                android:textColor="#183B56"
                android:textSize="18sp"
                android:textStyle="bold" />

            <!-- First Name -->
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/first_name"
                android:textColor="#184A61"
                android:layout_marginTop="8dp"
                android:textSize="14sp"/>

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/firstNameInput"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="12dp"
                android:paddingStart="8dp"
                android:background="@drawable/edit_text_bg"
                android:textColorHint="#BDBDBD"
                android:hint="@string/shivani" />

            <!-- Last Name -->
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/last_name"
                android:textColor="#184A61"
                android:textSize="14sp" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/lastNameInput"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="12dp"
                android:paddingStart="8dp"
                android:background="@drawable/edit_text_bg"
                android:textColorHint="#BDBDBD"
                android:hint="@string/shendkar" />

            <!-- Work Email -->
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/work_email"
                android:textColor="#184A61"
                android:textSize="14sp" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/emailInput"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="12dp"
                android:paddingStart="8dp"
                android:textColorHint="#BDBDBD"
                android:background="@drawable/edit_text_bg"
                android:enabled="false"
                android:hint="@string/shivanishendkar_company_com" />

            <!-- Company Name -->
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/company_name"
                android:textColor="#184A61"
                android:textSize="14sp" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/companyNameInput"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="12dp"
                android:paddingStart="8dp"
                android:background="@drawable/edit_text_bg"
                android:textColorHint="#BDBDBD"
                android:hint="@string/woliba"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <!-- Next Button -->
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/nextButton"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginHorizontal="8dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="#EEEEEE"
        android:enabled="false"
        android:text="@string/next"
        android:textAllCaps="false"
        android:textColor="#989898"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>

</layout>