<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View"/>


    </data>

<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:padding="16dp">

    <!-- Woliba Logo -->
    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/logoIcon"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:contentDescription="@string/logo"
        android:src="@drawable/ic_logo"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="8dp"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Language Flag & Dropdown -->
    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/flagIcon"
        android:layout_width="70dp"
        android:layout_height="40dp"
        android:contentDescription="@string/language"
        android:src="@drawable/ic_us_flag"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Login Card Container -->
    <androidx.cardview.widget.CardView
        android:id="@+id/loginCard"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:layout_marginTop="32dp"
        app:cardCornerRadius="16dp"
        app:cardElevation="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logoIcon">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <!-- Header -->
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/profileHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:paddingBottom="16dp"
                android:text="@string/complete_your_profile"
                android:textColor="@color/text_field_color"
                android:textSize="18sp"
                android:textStyle="bold" />

            <!-- Password -->
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:textColor="@color/text_field_color"
                android:layout_marginTop="8dp"
                android:textSize="14sp"/>

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/passwordInput"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="12dp"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:singleLine="true"
                android:lines="1"
                android:maxLength="16"
                android:inputType="textPassword"
                android:imeOptions="actionNext"
                android:textCursorDrawable="@drawable/black_cursor"
                android:background="@drawable/edit_text_bg"
                android:textColorHint="@color/hint_text_color"
                android:hint="@string/enter_password" />

            <!-- Confirm password -->
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/confirm_password"
                android:textColor="@color/text_field_color"
                android:textSize="14sp" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/confirmPasswordInput"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="12dp"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:singleLine="true"
                android:lines="1"
                android:maxLength="16"
                android:inputType="textPassword"
                android:imeOptions="actionNext"
                android:textCursorDrawable="@drawable/black_cursor"
                android:background="@drawable/edit_text_bg"
                android:textColorHint="@color/hint_text_color"
                android:hint="@string/enter_password" />

            <!-- Birthday -->
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/birthday"
                android:textColor="@color/text_field_color"
                android:textSize="14sp" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/birthdayInput"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="12dp"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:singleLine="true"
                android:lines="1"
                android:textCursorDrawable="@drawable/black_cursor"
                android:background="@drawable/edit_text_bg"
                android:textColorHint="@color/hint_text_color"
                android:hint="@string/mm_dd_yyyy"/>

            <!-- Contact number -->
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/contact_number"
                android:textColor="@color/text_field_color"
                android:textSize="14sp" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/contactNumberInput"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="12dp"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:lines="1"
                android:maxLength="10"
                android:inputType="number"
                android:digits="0123456789"
                android:imeOptions="actionNext"
                android:textCursorDrawable="@drawable/black_cursor"
                android:background="@drawable/edit_text_bg"
                android:textColorHint="@color/hint_text_color"
                android:hint="@string/enter_contact_number"/>

            <!-- Checkbox -->
            <LinearLayout
                android:id="@+id/termsAndPolicyContainer"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="12dp"
                android:orientation="horizontal"
                android:gravity="center_vertical">

                <androidx.appcompat.widget.AppCompatCheckBox
                    android:id="@+id/checkBox"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:button="@drawable/custom_checkbox"/>

                <!-- Terms and Privacy Policy -->
                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/termsAndPolicyText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/terms_and_privacy_policy"
                    android:textColor="@color/black"
                    android:textSize="12sp"
                    android:layout_marginStart="16dp" />

            </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <!-- Next Button -->
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/nextButton"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginHorizontal="8dp"
        android:layout_marginBottom="16dp"
        android:textStyle="bold"
        android:clickable="false"
        android:text="@string/next"
        android:textAllCaps="false"
        android:background="@drawable/disable_btn_bg"
        android:textColor="@color/button_text_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>

</layout>